[package]
name = "moedb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.66"
bincode = "1.3.3"
chrono = "0.4.24"
dirs = "5.0.0"
toml = "0.7.3"
fancy-regex = "0.11.0"
hdrhistogram = "7.5.2"
rocksdb = { version= "0.20.1", features=["multi-threaded-cf","snappy"] }
rand = "0.8.5"
serde = { version="1.0.152", features=["derive"] }
serde_derive = "1.0.156"
serde_json = "1.0.91"
thiserror = "1.0.39"
itertools = "0.10.3"
rayon = "1.6.1"
tokio = { version="1.26.0", features=["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-appender = "0.2.2"
valico = { git="https://github.com/mjm918/valico.git", rev="4f6fc07554f8e55506ce90327121c0b4e838c149" }